# Drawing-Annotation-Tool

./: .gitignore  README.md  annotate.py  pyproject.toml
