[tool.poetry]
name = "drawing_annotation_tool"
version = "0.1.0"
description = ""
authors = ["tida <tdamuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
opencv-contrib-python = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
